--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,12 @@ __pycache__/
 .vscode/
 docs/
 *.pth
-*.mp4
 debug_images/
 *.png
 *.jpg
 *.npy
 images/
-test_sample/
+test_sample/test-sample*.mp4
 result/
 vots/
 vots.py
